--- a/assets/css/menu/menu.css
+++ b/assets/css/menu/menu.css
@@ -4,3 +4,7 @@
     align-items: center;
     justify-content: space-between;
 }
+
+.header__menu--link:hover{
+    border-bottom: 2px solid #000;
+}
