--- a/assets/css/sobre-mi/sobre-mi.css
+++ b/assets/css/sobre-mi/sobre-mi.css
@@ -1,26 +1,69 @@
-.sobre-mi{
-    display: flex;
-    justify-content: space-between;
-    margin-left: 9.5rem;
-    margin-right: 9.5rem;
+.sobre-mi {
+
+  width: auto;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 9.5rem;
+  margin-right: 9.5rem;
+  margin-top: 64px;
 }
 
-.sobre-mi__description{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+.sobre-mi__section{
+    width: 100%;
+    background-color: var(--bakcground-claro);
+    margin-bottom: 2rem;
 }
 
-.sobre-mi__description--container{
-    padding-left: 20px;
+.sobre-mi__description {
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-around;
+  padding-top: 5rem;
 }
 
-.sobre-mi__description--list{
-    display: flex;
+.sobre-mi__description--container {
+  padding-right: 20px;
 }
 
-.sobre-mi__description--img{
-    width: 368px;
-    height: 368px;
-    border-radius: 50%;
+.sobre-mi__description--title {
+  font-size: 52px;
+  font-weight: 700;
+  margin-bottom: 24px;
+}
+
+.sobre-mi__description--text {
+  font-size: 22px;
+  font-weight: 400;
+  margin-bottom: 24px;
+}
+
+.sobre-mi__description--list {
+  display: flex;
+}
+
+.sobre-mi__description--item{
+  display: flex;
+  align-items: center;
+  margin-right: 32px;
+}
+
+.sobre-mi__description--link {
+  color: var(--texto-principal);
+  font-weight: 500;
+  text-transform: capitalize;
+  text-decoration: none;
+}
+
+.sobre-mi__description--item:hover{
+  border-bottom: 2px solid #000;
+}
+
+.sobre-mi__description--img-container{
+  height: 350px;
+  width: 350px;
+  background: url(../../img/ivan.jpg) center/cover no-repeat;
+  border-radius: 50%;;
 }
