--- a/assets/css/experience/experience.css
+++ b/assets/css/experience/experience.css
@@ -96,7 +96,38 @@
     flex-direction: row-reverse;
 }
 
-.seperation-top {
+.seperation-top-bottom {
     padding-top: 4rem;
 }
 
+@media screen and (max-width: 768px){
+    .experience{
+        margin-left: 1.5rem;
+        margin-right: 1.5rem;
+        margin-bottom: 2rem;
+    }
+
+    .experience__title{
+        font-size: 22px;
+        margin-bottom: 0.5rem;
+    }
+
+    .experience__item{
+        flex-direction: column;
+        height: max-content;
+    }
+
+    .item__img--container{
+        width: 100%;
+    }
+
+    .item__info--container{
+        width: 100%;
+        margin-left: 0;
+    }
+    
+    .seperation-top-bottom{
+        padding-top: 4rem; 
+        padding-bottom: 2rem;
+    }
+}
