--- a/assets/css/experience/experience.css
+++ b/assets/css/experience/experience.css
@@ -131,3 +131,13 @@
         padding-bottom: 2rem;
     }
 }
+
+/* Diseño responsive mobile */
+
+@media screen and (max-width: 375px){
+    .experience{
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
+        margin-bottom: 2rem;
+    }
+}
