--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -31,6 +31,7 @@
   text-transform: none;
 } 
 
+/* Diseño responsive tablet 768px */
 
 @media screen and (max-width: 768px){
   .header__container{
@@ -51,4 +52,18 @@
   .header__logo{
    position: absolute;
   }
+}
+
+/* Diseño responsive mobile 375px */
+
+@media screen and (max-width: 375px) {
+  .header__container{
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
+
+  .header__menu--item:last-child{
+    top: 39px;
+  }
+
 }
