--- a/assets/css/contacto/contacto.css
+++ b/assets/css/contacto/contacto.css
@@ -156,6 +156,22 @@ select:-webkit-autofill:focus {
     resize: none;
 }
 
+.form__textarea--error{
+    width: 100%;
+    height: 250px;
+    border-radius: 5px;
+    background: #FFF;
+    color: #706c6c;
+    font-size: 1rem;
+    font-family: 'Raleway', sans-serif;
+    padding-left: 8px;
+    padding-top: 30px;
+    border: 1px solid #F00;
+    outline: none;
+    margin-top: 0.5rem;
+    resize: none;
+}
+
 .form__textarea:focus + .form__label,
 .form__textarea:not(:placeholder-shown) + .form__label{
     transform: translateY(8px) scale(.8);
